--- a/views/index.ejs
+++ b/views/index.ejs
@@ -457,6 +457,7 @@
 
     <form id="RemoveLineBreaks-FORM" action="/RemoveLineBreaks" method="POST" style="display: none">
         <fieldset>
+            <legend>Remove Line Breaks</legend>
             <input style="font-size: x-large" type="submit" value="Submit">
             <textarea name="TextToChange" rows="30"></textarea>
             <input style="font-size: x-large" type="submit" value="Submit">
@@ -465,6 +466,7 @@
 
     <form id="FileName_UrlConverter-FORM" action="/FileName_UrlConverter" method="POST" style="display: none">
         <fieldset>
+            <legend>File Name ↔ URL Converter</legend>
             <input style="font-size: x-large" type="submit" value="Convert">
 
             <h3>Custom Path Option</h3>
