--- a/views/index.ejs
+++ b/views/index.ejs
@@ -266,7 +266,7 @@
 
             <p>
                 Otherwise, if the field above is left blank, generate the script <b>AFTER</b> placing the video files in
-                the <b>placeholder</b> folder within the root of the project.
+                the <b><%= FFMPEG_Path %></b> folder in the root of the project.
             </p>
 
             <h3>Include/Exclude Options</h3>
